Migrate from android views to compose (#329)
* Make composable welcome screen

* Select available document types from supported countries

* Navigate to document capture methods

* Pick and upload images

* Manually take photos and upload them for verification

* Navigate to the confirmation screen

* Scan verification documents

* Check pending requirements and navigate appropriately

* Show progress indicator when uploading documents

* Update CameraViews and Document and Face Analysis tools to work with compse

* Move navigation utilities to navigation package

* Display Error screen when there is camera timeout

* Update how navigation routes are handled

* Ensure loading  screen is displayed

* Load svg flag images

* Update countries screen us

* Complete the verification process

* Update welcome screen to pass identity verification result

* Update WelcomeScreen.kt

* Create Welcome view tests

* Create test app

* Add document selection screen tests

* Add tests for Manual Capture Screen

* Tests for Document Capture Method Screen

* Test Confirmation screen UI

* Add support screen

* Check if camera permissions have been allowed

* Update implementation of how to navigate to Error Screens

* Navigate to requirement errors

* Delete android views and fragment

* Build view for ID number verification

* Migrate from Id number verification to compose

* Compose tax pin verification views

* Check if client application is supported

* Cancel the flow on back press

* Navigate up to resolve error

* Use Single line text Textfields

* Fix formatting issues

* Resolve formating issues

* Ignore compose dialect

* Update test cases

* Fix failing tests

---------

Co-authored-by: Seth Onyango <57979366+SecyWecy@users.noreply.github.com>