@@ -1,7 +1,7 @@
 val ktlint by configurations.creating
 
 dependencies {
-    ktlint("com.pinterest:ktlint:0.34.2")
+    ktlint("com.pinterest:ktlint:0.48.2")
 }
 
 tasks {
@@ -19,8 +19,9 @@ tasks {
     val ktlintFormat by creating(JavaExec::class) {
         group = "formatting"
         description = "Fix Kotlin code style deviations."
-        mainClass.set("com.pinterest.ktlint.Main")
         classpath = configurations["ktlint"]
-        args("-F", "src/**/*.kt")
+        jvmArgs = listOf("--add-opens=java.base/java.lang=ALL-UNNAMED")
+        setProperty("mainClass", "com.pinterest.ktlint.Main")
+        args = listOf("-F", "src/**/*.kt")
     }
 }
